@@ -2,9 +2,12 @@
 
 Griffith ChangeLog
 ------------------
-(c) 2005-2011  Vasco Nunes, Piotr Ożarowski
+(c) 2005-2012  Vasco Nunes, Piotr Ożarowski
 
 
+2012-01-29  Michael Jahn
+	* [#923416] Connection failed. (Amazon plugin)
+	
 2012-01-10  Piotr Ożarowski
 	* Filmweb movie plugin updated (thanks to mariusz2806)
 
